--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ body {
 
 .intro-bg {
   position: absolute;
-  inset: 0;
+  line-height: 1.08; /* Added for desktop */
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -63,7 +63,7 @@ body {
 
 .intro-title {
   position: relative;
-  z-index: 3;
+    line-height: 1.08; /* Reduced for mobile */
   display: flex;
   gap: 0.3em;
   font-size: 3rem;
